# MincraftClone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Inc/: Biome.h  BlockData.h  CMakeLists.txt  Camera.h  Chunk.h  ChunkSection.h  Enemy.h  Entity.h  Inventory.h  Mesh.h  Model.h  NoiseGenerator.h  Player.h  Random.h  Renderer2D.h  Shader.h  Texture.h  World.h  WorldGenerator.h  basicMesh.h  chunkMap.h  gameClass.h  individualFunctions.h  struct.h
Levels/: level1.txt
Res/: info.txt
Resources/models/: guy.dae
Resources/shaders/: basic2D_frag.glsl  basic2D_vert.glsl  basic_frag.glsl  basic_geom.glsl  basic_vert.glsl  cubeText_frag.glsl  cubeText_vert.glsl  cube_depth_frag.glsl  cube_depth_geom.glsl  cube_depth_vert.glsl  depth_frag.glsl  depth_vert.glsl  light_frag.glsl  light_vert.glsl  model_frag.glsl  model_vert.glsl  screen_frag.glsl  screen_vert.glsl  shadow_frag.glsl  shadow_vert.glsl  text_frag.glsl  text_vert.glsl
Source/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Context.cpp  Context.h  Controller.cpp  Controller.h  Main.cpp  Mesh.h  Text.cpp  Text.h
Source/GL/: GLFunctions.h
Source/Item/: CMakeLists.txt
Source/Maths/: CMakeLists.txt  Vector2XZ.h  glm.h
Source/Player/: Player.cpp  Player.h
Source/Renderer/: CMakeLists.txt  FloraRenderer.h  RenderMaster.cpp  RenderMaster.h  SkyboxRenderer.cpp  TextRenderer.cpp  TextRenderer.h  WaterRenderer.h
Source/Shaders/: BasicShader.cpp  BasicShader.h  CMakeLists.txt  ChunkShader.cpp  FloraShader.cpp  Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h  SkyboxShader.cpp  TextShader.cpp  TextShader.h  WaterShader.cpp
Source/States/: CMakeLists.txt  PlayState.cpp  PlayState.h  StateBase.h
Source/Texture/: BasicTexture.cpp  BasicTexture.h  CMakeLists.txt  CubeTexture.cpp  CubeTexture.h  TextureAtlas.cpp  TextureAtlas.h
Source/Util/: CMakeLists.txt  FPSCounter.cpp  FPSCounter.h
Source/World/: CMakeLists.txt  World.cpp  World.h
Source/World/Block/: BlockData.cpp  BlockData.h  CMakeLists.txt
Source/World/Block/BlockTypes/: BlockType.h
Source/World/Chunk/: CMakeLists.txt  Chunk.cpp  Chunk.h  ChunkMesh.cpp  ChunkMesh.h  ChunkMeshBuilder.cpp  ChunkMeshBuilder.h  ChunkSection.cpp  ChunkSection.h
Source/World/Event/: CMakeLists.txt  PlayerDigEvent.cpp  PlayerDigEvent.h
Source/World/Generation/: CMakeLists.txt
Source/World/Generation/Terrain/: ClassicOverWorldGenerator.cpp
Src/: Biome.cpp  BlockData.cpp  CMakeLists.txt  Camera.cpp  Chunk.cpp  ChunkMap.cpp  ChunkSection.cpp  Enemy.cpp  Entity.cpp  Inventory.cpp  Mesh.cpp  Model.cpp  NoiseGenerator.cpp  Player.cpp  Random.cpp  Renderer2D.cpp  Shader.cpp  Texture.cpp  World.cpp  WorldGenerator.cpp  gameClass.cpp  struct.cpp
Support/: CMakeLists.txt  stb_builder.cpp
